# PreProyectoCompiladores

./: CMakeLists.txt  README.md  a.out  assembler.s  auxiliary.h  calc-lexico.l  calc-sintaxis.tab.c  calc-sintaxis.tab.h  calc-sintaxis.y  input.txt  lex.yy.c  linkedlist.c  linkedlist.h  main.c  name.dot  nodetree.c  nodetree.h  print.c  symboltable.c  symboltable.h  threeadresscode.c  threeadresscode.h  treeadresscode.c  treeadresscode.h
